--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,13 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YEETOS</title>
-</head>
+<% layout('layouts/boilerplate') %>
+
 <body>
+    
     <h1>YEETOS</h1>
+
+    <h2>Tell me all about that 🌯</h2>
+
+    <h3>Log in</h3>
+    <h3>Sign up</h3>
     
 </body>
-</html>
