--- a/views/burritos/edit.ejs
+++ b/views/burritos/edit.ejs
@@ -1,31 +1,51 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit Burrito</title>
-</head>
-<body>
-    <h1>Edit Burrito</h1>
+<% layout('layouts/boilerplate') %>
 
-    <form action="/burritos/<%=burrito._id%>?_method=PUT" method="POST">
-        <div>
-            <label for="title">Title</label>
-            <input type="text" id="title" name="burrito[title]" value="<%= burrito.title %>">
-        </div>
-        <div>
-            <label for="location">Location</label>
-            <input type="text" id="location" name="burrito[location]" value="<%= burrito.location %>">
-        </div>
-        <div>
-            <label for="restaurant">Restaurant</label>
-            <input type="text" id="restaurant" name="burrito[restaurant]" value="<%= burrito.restaurant %>">
-        </div>
-        <button>Change Yeet's Deets</button>
-    </form>
+<h1>Edit Burrito</h1>
 
-    <a href="/burritos/<%= burrito._id %> ">Back to Burrito</a>
+<a href="/burritos/<%= burrito._id %> ">Back to Burrito</a>
 
-</body>
-</html>
+<div class="row">
+    <h1 class="text-center">Edit Burrito</h1>
+    <div class="col-6 offset-3">
+        <form action="/burritos/<%=burrito._id%>?_method=PUT" method="POST">
+            <div class="mb-3">
+                <label class="form-label" for="title">Title</label>
+                <input class="form-control" type="text" id="title" name="burrito[title]" value="<%= burrito.title %>"">
+            </div>
+
+            <div class="mb-3">
+                <label class="form-label" for="restaurant">Restaurant</label>
+                <input class="form-control" type="text" id="restaurant" name="burrito[restaurant]" value="<%= burrito.restaurant %>">
+            </div>
+
+            <div class="mb-3">
+                <label class="form-label" for="location">Location</label>
+                <input class="form-control" type="text" id="location" name="burrito[location]" value="<%= burrito.location %>">
+            </div>
+
+            <div class="mb-3">
+                <label class="form-label" for="price">Burrito Price</label>
+                <div class="input-group">
+                    <span class="input-group-text" id="price-label">$</span>
+                    <input type="text" class="form-control" id="price" placeholder="0.00" aria-label="price" aria-describedby="" name="burrito[price]" value="<%= burrito.price %>">
+                </div>
+            </div>
+
+            <div class="mb-3">
+                <label class="form-label" for="image">Image URL</label>
+                <input class="form-control" type="text" id="image" name="burrito[image]" value="<%= burrito.image %>">
+            </div>
+
+            <div class="mb-3">
+                <label class="form-label" for="description">Description</label>
+                <textarea class="form-control" type="text" id="description" name="burrito[description]"><%= burrito.description %> </textarea>
+            </div>
+
+            <div class="mb-3">
+                <button class="btn btn-success">Change Yeet's Deets</button>
+            </div>
+            
+        </form>
+        <a href="/burritos">Back to Burritos</a>
+    </div>
+</div>
