--- a/views/burritos/new.ejs
+++ b/views/burritos/new.ejs
@@ -1,31 +1,47 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Burrito</title>
-</head>
-<body>
-    <h1>New Burrito</h1>
+<% layout('layouts/boilerplate') %>
 
-    <form action="/burritos" method="POST">
-        <div>
-            <label for="title">Title</label>
-            <input type="text" id="title" name="burrito[title]">
-        </div>
-        <div>
-            <label for="location">Location</label>
-            <input type="text" id="location" name="burrito[location]">
-        </div>
-        <div>
-            <label for="restaurant">Restaurant</label>
-            <input type="text" id="restaurant" name="burrito[restaurant]">
-        </div>
-        <button>Tell me bout that burro</button>
-    </form>
+<div class="row">
+    <h1 class="text-center">New Burrito</h1>
+    <div class="col-6 offset-3">
+        <form action="/burritos" method="POST">
+            <div class="mb-3">
+                <label class="form-label" for="title">Title</label>
+                <input class="form-control" type="text" id="title" name="burrito[title]">
+            </div>
 
-    <a href="/burritos">Back to Burritos</a>
+            <div class="mb-3">
+                <label class="form-label" for="restaurant">Restaurant</label>
+                <input class="form-control" type="text" id="restaurant" name="burrito[restaurant]">
+            </div>
 
-</body>
-</html>
+            <div class="mb-3">
+                <label class="form-label" for="location">Location</label>
+                <input class="form-control" type="text" id="location" name="burrito[location]">
+            </div>
+
+            <div class="mb-3">
+                <label class="form-label" for="price">Burrito Price</label>
+                <div class="input-group">
+                    <span class="input-group-text" id="price-label">$</span>
+                    <input type="text" class="form-control" id="price" placeholder="0.00" aria-label="price" aria-describedby="" name="burrito[price]">
+                </div>
+            </div>
+
+            <div class="mb-3">
+                <label class="form-label" for="image">Image URL</label>
+                <input class="form-control" type="text" id="image" name="burrito[image]">
+            </div>
+
+            <div class="mb-3">
+                <label class="form-label" for="description">Description</label>
+                <textarea class="form-control" type="text" id="description" name="burrito[description]"></textarea>
+            </div>
+
+            <div class="mb-3">
+                <button class="btn btn-success">Tell me bout that burro</button>
+            </div>
+            
+        </form>
+        <a href="/burritos">Back to Burritos</a>
+    </div>
+</div>
