--- a/views/burritos/show.ejs
+++ b/views/burritos/show.ejs
@@ -1,29 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Show</title>
-</head>
-<body>
-    <h1><%= burrito.title %></h1>
-    <h2><%= burrito.location %></h2>
-    <h3><%= burrito.restaurant %></h3>
+<% layout('layouts/boilerplate') %>
 
-    <p>
-        <a href="/burritos/<%= burrito._id %>/edit">Edit</a>
-    </p>
-
-    <p>
-        <form action="/burritos/<%= burrito._id %>?_method=DELETE" method="POST">
-            <button>DELETE that YEET</button>
-        </form>
-    </p>
-
-    <footer>
-        
-        <a href="/burritos">Back to Burritos</a>
-    </footer>
-</body>
-</html>
+<div class="row">
+    <div class="col-6 offset-3">
+        <div class="card mb-3">
+            <img src="<%= burrito.image %>" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title"><%= burrito.title %></h5>
+              <p class="card-text"><%= burrito.description %></p>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item"><%= burrito.restaurant %> - <span class="text-muted"><%= burrito.location %></span></li>
+              <li class="list-group-item">$<%= burrito.price %></li>
+            </ul>
+            <div class="card-body">
+              <a href="/burritos/<%= burrito._id %>/edit" class="card-link btn btn-info">Edit</a>
+              <form class="d-inline card-link" action="/burritos/<%= burrito._id %>?_method=DELETE" method="POST">
+                <button class="btn btn-danger">DELETE that YEET</button>
+            </form>
+            </div>
+            <div class="card-footer text-muted">
+                <a class="btn btn-primary btn-sm" href="/burritos">Back to Burritos</a>
+            </div>
+        </div>  
+    </div>
+</div>
