date, minus type

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,7 +4,7 @@
     
     <h1>YEETOS</h1>
 
-    <h2>Tell me all about that 🌯</h2>
+    <a href="/burritos"><h2>Tell me all about that 🌯</h2></a>
 
     <h3>Log in</h3>
     <h3>Sign up</h3>
