--- a/views/burritos/show.ejs
+++ b/views/burritos/show.ejs
@@ -19,8 +19,20 @@
             </form>
             </div>
             <div class="card-footer text-muted">
-                <a class="btn btn-primary btn-sm" href="/burritos">Back to Burritos</a>
+                <a href="/burritos">Back to Burritos</a>
             </div>
-        </div>  
+        </div>
+        <h2>Leave a Review</h2>
+        <form class="mb-3" action="" method="">
+          <div class="mb-3">
+            <label class="form-label" for="rating">Rating</label>
+            <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating">
+          </div>
+          <div class="mb-3">
+            <label class="form-label" for="body">Review</label>
+            <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3"></textarea>
+          </div>
+          <button class="btn  btn-success">Submit</button>
+        </form> 
     </div>
 </div>
