--- a/views/burritos/show.ejs
+++ b/views/burritos/show.ejs
@@ -1,7 +1,7 @@
 <% layout('layouts/boilerplate') %>
 
 <div class="row">
-    <div class="col-6 offset-3">
+    <div class="col-6">
         <div class="card mb-3">
             <img src="<%= burrito.image %>" class="card-img-top" alt="...">
             <div class="card-body">
@@ -22,17 +22,40 @@
                 <a href="/burritos">Back to Burritos</a>
             </div>
         </div>
+    </div>
+
+    <div class="col-6">
         <h2>Leave a Review</h2>
-        <form class="mb-3" action="/burritos/<%= burrito._id %>/reviews " method="POST">
+        <form class="mb-3 validated-form" action="/burritos/<%= burrito._id %>/reviews " method="POST" novalidate>
           <div class="mb-3">
             <label class="form-label" for="rating">Rating</label>
             <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating">
           </div>
           <div class="mb-3">
             <label class="form-label" for="body">Review</label>
-            <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3"></textarea>
+            <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3" required></textarea>
+            <div class="valid-feedback">
+              Heard!
+            </div>
+            <div class="invalid-feedback">
+                Required!
+            </div>
           </div>
           <button class="btn  btn-success">Submit</button>
-        </form> 
+        </form>
+
+        <h3>Reviews</h3>
+        <% for(let review of burrito.reviews) { %>
+            <div class="mb-3 card">
+                <div class="card-body">
+                    <h5 class="card-title">Rating:  <%= review.rating %></h5>
+                    <p class="card-text">Review:  <%= review.body %></p>
+                    <form action="/burritos/<%= burrito._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST">
+                        <button class="btn btn-danger btn-sm">Delete</button>
+                    </form>
+                </div>
+            </div>
+        <% } %> 
     </div>
+
 </div>
