--- a/views/burritos/show.ejs
+++ b/views/burritos/show.ejs
@@ -15,7 +15,7 @@
             <div class="card-body">
               <a href="/burritos/<%= burrito._id %>/edit" class="card-link btn btn-info">Edit</a>
               <form class="d-inline card-link" action="/burritos/<%= burrito._id %>?_method=DELETE" method="POST">
-                <button class="btn btn-danger">DELETE that YEET</button>
+                <button class="btn btn-danger">YEET that burrito</button>
             </form>
             </div>
             <div class="card-footer text-muted">
