--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -12,36 +12,16 @@
     <%- include('../partials/navbar') %>
     
     <main class="container mt-5">
+        <%- include('../partials/flash') %>
         <%- body %> 
     </main>
 
     <%- include('../partials/footer') %>
 
+    <!-- Basic bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+    <!-- Form Validation -->
+    <script src="/js/validateforms.js"></script>
 
-    <!-- Copied from the bootstrap documentation (Validation Logic)-->
-
-    <script>
-        // Example starter JavaScript for disabling form submissions if there are invalid fields
-        (function () {
-        'use strict'
-        
-        // Fetch all the forms we want to apply custom Bootstrap validation styles to
-        const forms = document.querySelectorAll('.validated-form')
-        
-        // Loop over them and prevent submission
-        Array.from(forms)
-            .forEach(function (form) {
-            form.addEventListener('submit', function (event) {
-                if (!form.checkValidity()) {
-                event.preventDefault()
-                event.stopPropagation()
-                }
-        
-                form.classList.add('was-validated')
-            }, false)
-            })
-        })()
-    </script>
 </body>
 </html>
