--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -6,9 +6,18 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link" href="/">Home</a>
-          <a class="nav-link" href="/burritos">Burritos</a>
-          <a class="nav-link" href="/burritos/new">New Burrito</a>
+            <a class="nav-link" href="/">Home</a>
+            <a class="nav-link" href="/burritos">Burritos</a>
+            <a class="nav-link" href="/burritos/new">New Burrito</a>
+        </div>
+
+        <div class="navbar-nav" style="margin-left: auto;">
+            <% if(!currentUser) { %> 
+            <a class="nav-link" href="/login">Login</a>
+            <a class="nav-link" href="/register">Register</a>
+            <% } else { %>
+            <a class="nav-link" href="/logout">Logout, <%= currentUser.username %> </a>
+            <% } %> 
         </div>
       </div>
     </div>
