--- a/views/burritos/index.ejs
+++ b/views/burritos/index.ejs
@@ -1,6 +1,6 @@
 <% layout('layouts/boilerplate') %>
 
-<h1>Feed Me Burritos</h1>
+<h1 id="top">Feed Me Burritos</h1>
 <div>
     <a href="/burritos/new">New Burrito</a>
 </div>
@@ -25,4 +25,5 @@
             </div>
         </div>
     </div>
-    <% } %> 
+    <% } %>
+    <a href="#top">Back to Top</a>
