--- a/views/burritos/show.ejs
+++ b/views/burritos/show.ejs
@@ -28,6 +28,7 @@
     </div>
 
     <div class="col-6">
+        <% if(currentUser){ %> 
         <h2>Leave a Review</h2>
         <form class="mb-3 validated-form" action="/burritos/<%= burrito._id %>/reviews " method="POST" novalidate>
           <div class="mb-3">
@@ -46,16 +47,19 @@
           </div>
           <button class="btn  btn-success">Submit</button>
         </form>
-
+        <% } %> 
         <h3>Reviews</h3>
         <% for(let review of burrito.reviews) { %>
             <div class="mb-3 card">
                 <div class="card-body">
                     <h5 class="card-title">Rating:  <%= review.rating %></h5>
+                    <h5 class="card-subtitle mb-2 text-muted">User:  <%= review.author.username %></h5>
                     <p class="card-text">Review:  <%= review.body %></p>
+                    <% if(currentUser && review.author.equals(currentUser._id)) { %> 
                     <form action="/burritos/<%= burrito._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST">
                         <button class="btn btn-danger btn-sm">Delete</button>
                     </form>
+                    <% } %> 
                 </div>
             </div>
         <% } %> 
