--- a/views/burritos/show.ejs
+++ b/views/burritos/show.ejs
@@ -23,7 +23,7 @@
             </div>
         </div>
         <h2>Leave a Review</h2>
-        <form class="mb-3" action="" method="">
+        <form class="mb-3" action="/burritos/<%= burrito._id %>/reviews " method="POST">
           <div class="mb-3">
             <label class="form-label" for="rating">Rating</label>
             <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating">
