--- a/views/burritos/new.ejs
+++ b/views/burritos/new.ejs
@@ -16,7 +16,7 @@
             </div>
 
             <div>
-                <input type="file" name="image" id="">
+                <input type="file" name="images" id="">
             </div>
             
 
