--- a/views/burritos/show.ejs
+++ b/views/burritos/show.ejs
@@ -4,7 +4,9 @@
 <div class="row">
     <div class="col-6">
         <div class="card mb-3">
-            <img src="<%= burrito.image %>" class="card-img-top" alt="...">
+            <% for(let img of burrito.images) { %> 
+            <img src="<%= img.url %>" class="card-img-top" alt="...">
+            <% } %> 
             <div class="card-body">
               <h5 class="card-title"><%= burrito.title %></h5>
               <p class="card-text"><%= burrito.description %></p>
